manifests/podinfo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: podinfo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: podinfo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: podinfo
      annotations:
        prometheus.io/scrape: true
        prometheus.io/port: "9898"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo:0.0.1
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 48Mi
  minReadySeconds: 10
  strategy:
    blueGreen:
      activeService: podinfo
      previewService: podinfo-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 60
