manifests/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  type: ClusterIP
  selector:
    app.kubernets.io/name: podinfo
  ports:
  - port: 80
    targetPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-preview
spec:
  type: ClusterIP
  selector:
    app.kubernets.io/name: podinfo
  ports:
  - port: 80
    targetPort: 9898
